Added Stripe Payments and Pro UI

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^5.4.1",
+    "@stripe/stripe-js": "^8.5.3",
     "axios": "^1.13.2",
     "lucide-react": "^0.556.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.10.1",
+    "react-spinners": "^0.17.0",
     "tailwind-scrollbar-hide": "^4.0.0"
   },
   "devDependencies": {
