Final Deploy: Cloudinary and Profile Sync

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "netflix-frontend-pro",
+  "name": "netflix-frontend-v3",
   "private": true,
   "version": "0.0.0",
   "type": "module",
